# AI-PDF-ASSISTANT

./: .gitignore  life_of_project.md  pyproject.toml  render.yaml  requirments.txt
client/: index.html
client/css/: style.css
client/js/: app.js  chat.js  summary.js  upload.js
server/: agent.py  app.py  main.py  render.yaml
server/routes/: chat.py  summary.py  upload.py
server/schemas/: response.py
server/tools/: chat.py  chunker.py  document_merger.py  document_router.py  document_session.py  embeddings.py  image_extractor.py  llm.py  read_pdf.py  retriever.py  summary.py  test.py  vector_store.py
