[project]
name = "project-777"
version = "0.1.0"
description = "AI PDF Assistant with RAG, Chat and Summarization"
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [

    "chromadb>=1.5.9",

    "fastapi>=0.139.0",

    "google-genai>=1.30.0",

    "langchain>=0.3.27",

    "langchain-core>=0.3.74",

    "langchain-chroma>=1.1.0",

    "langchain-huggingface>=1.2.2",

    "langchain-mistralai>=0.2.11",

    "pymupdf>=1.28.0",

    "pillow>=11.3.0",

    "python-dotenv>=1.1.1",

    "python-multipart>=0.0.32",

    "sentence-transformers>=5.6.0",

    "uvicorn>=0.35.0",
]