[project]
name = "project-777"
version = "0.1.0"
description = "AI PDF Assistant with RAG, Chat and Summarization"
readme = "README.md"
requires-python = ">=3.11,<3.12"

dependencies = [
    # ---------- Backend ----------
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.35.0",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.1.1",

    # ---------- LangChain ----------
    "langchain>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-chroma>=1.0.0",
    "langchain-huggingface>=1.0.0",
    "langchain-mistralai>=1.0.0",
    "langchain-text-splitters>=1.0.0",

    # ---------- Vector DB ----------
    "chromadb>=1.5.9",

    # ---------- Embeddings ----------
    "sentence-transformers>=5.0.0",

    # ---------- LLM ----------
    "google-genai>=1.30.0",

    # ---------- PDF ----------
    "pymupdf>=1.28.0",
    "pillow>=11.0.0",

    # ---------- Optional Utilities ----------
    "numpy>=2.0.0",
]